feat: added ECDF plot interpretation

--- a/main.ipynb
+++ b/main.ipynb
@@ -608,10 +608,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluation and Comparison of Results\n",
+    "## Evaluation of Results\n",
     "\n",
-    "##### Empirical Cumulative Distribution Function (ECDF) plot for event_interval:\n",
-    "![image.png](attachment:image.png)\n"
+    "### Empirical Cumulative Distribution Function (ECDF) plot for event_interval:\n",
+    "![image.png](attachment:image.png)\n",
+    "\n",
+    "- The x-axis goes from about 0 to around 140+ days, indicating the event_interval can span from very short gaps to nearly five months.\n",
+    "- Based on the y-axis at any given x value, we can see the fraction of events that have intervals up to that many days.\n",
+    "- For example:\n",
+    "    1. At $𝑥 ≈ 30$, if the ECDF is around 0.2, that means about 20% of intervals are 30 days or fewer.\n",
+    "    2. At $𝑥 ≈ 100$, if the ECDF is around 0.7, that means about 70% of intervals are 100 days or fewer.\n",
+    "\n",
+    "**Insights**:\n",
+    "- If the plot rises quickly at lower event_interval values, it means a substantial portion of intervals are short.\n",
+    "- If it remains more gradual, intervals are spread out over a wider range.\n",
+    "- We can identify approximate quartiles or medians by looking for where the ECDF crosses 0.25, 0.5, 0.75, etc."
    ]
   }
  ],
