docs: update README and notebook with objectives for SEE methodology and clustering comparison

--- a/SEE_MAIN.ipynb
+++ b/SEE_MAIN.ipynb
@@ -11,7 +11,25 @@
     "1. K‑Means Clustering (original approach)\n",
     "2. DBSCAN Clustering (alternative approach)\n",
     "\n",
-    "For each approach, we analyze two medication categories (e.g., medA and medB) using the dataset in `data/med_events.csv`."
+    "For each approach, we analyze two medication categories (e.g., medA and medB) using the dataset in `data/med_events.csv`.\n",
+    "\n",
+    "## Objectives\n",
+    "\n",
+    "#### 1. Replicate the SEE Methodology:\n",
+    "- Convert the SEE R code into Python and validate its functionality on a dataset.\n",
+    "- Implement K-Means clustering to estimate prescription durations and identify exposure windows.\n",
+    "\n",
+    "#### 2. Explore an Alternative Clustering Algorithm:\n",
+    "- Substitute K-Means with a different clustering approach (e.g., DBSCAN, Hierarchical Clustering, or GMM).\n",
+    "- Compare the resulting clusters, prescription durations, and exposure periods to those from K-Means.\n",
+    "\n",
+    "#### 3. Evaluate and Compare Results:\n",
+    "- Generate metrics and visualizations to illustrate how each clustering algorithm performs.\n",
+    "- Discuss strengths, weaknesses, and potential applications of each approach.\n",
+    "\n",
+    "#### 4. Document Findings and Insights:\n",
+    "- Summarize the differences in performance and outcomes between K-Means-based SEE and the alternative method.\n",
+    "- Provide clear recommendations on how clustering choice can affect pharmacoepidemiological analyses."
    ]
   },
   {
