--- a/SEE_MAIN.ipynb
+++ b/SEE_MAIN.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,20 +83,100 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data loaded:\n",
-      "   PATIENT_ID        DATE  PERDAY CATEGORY  DURATION\n",
-      "0           1  04/26/2033       4     medA        50\n",
-      "1           1  07/04/2033       4     medB        30\n",
-      "2           1  08/03/2033       4     medB        30\n",
-      "3           1  08/17/2033       4     medB        30\n",
-      "4           1  10/13/2033       4     medB        30\n"
+      "Data loaded:\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PATIENT_ID</th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>PERDAY</th>\n",
+       "      <th>CATEGORY</th>\n",
+       "      <th>DURATION</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>04/26/2033</td>\n",
+       "      <td>4</td>\n",
+       "      <td>medA</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>07/04/2033</td>\n",
+       "      <td>4</td>\n",
+       "      <td>medB</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>08/03/2033</td>\n",
+       "      <td>4</td>\n",
+       "      <td>medB</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>08/17/2033</td>\n",
+       "      <td>4</td>\n",
+       "      <td>medB</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10/13/2033</td>\n",
+       "      <td>4</td>\n",
+       "      <td>medB</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PATIENT_ID        DATE  PERDAY CATEGORY  DURATION\n",
+       "0           1  04/26/2033       4     medA        50\n",
+       "1           1  07/04/2033       4     medB        30\n",
+       "2           1  08/03/2033       4     medB        30\n",
+       "3           1  08/17/2033       4     medB        30\n",
+       "4           1  10/13/2033       4     medB        30"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv(\"data/med_events.csv\")\n",
     "print(\"Data loaded:\")\n",
-    "print(df.head())"
+    "df.head()"
    ]
   },
   {
@@ -115,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
