feat: added insights for the 80% ecdf comparison

--- a/SEE_MAIN.ipynb
+++ b/SEE_MAIN.ipynb
@@ -1002,6 +1002,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Interpretation & Insights**\n",
+    "\n",
+    "*medA (Top Row)*\n",
+    "\n",
+    "1. *K‑Means (Top-Left)*\n",
+    "    - Multiple red dashed lines indicate that K‑Means is dividing the lower 80% of intervals into at least two clusters (possibly more, depending on how many you specified).\n",
+    "    - Because medA’s intervals stretch beyond 100 days, there’s a notable spread in how K‑Means is segmenting them. This might reflect genuinely broad refill patterns or simply the algorithm forcing distinct clusters.\n",
+    "\n",
+    "2. *DBSCAN (Top-Right)*\n",
+    "    - The green dashed lines are fewer or placed differently, suggesting DBSCAN sees either a single main cluster or fewer distinct clusters in that 0–100+ day range.\n",
+    "    - If DBSCAN found intervals that are too sparse, it could label them as noise (no vertical line). Conversely, it might group most intervals into one large cluster if the density is relatively uniform.\n",
+    "\n",
+    "*Insights:*\n",
+    "- The 80% portion covers a relatively wide range of refill intervals, highlighting variability in how patients refill. K‑Means is slicing that range into multiple clusters, while DBSCAN may unify them (or mark some as noise) if it does not detect strong density breaks.\n",
+    "\n",
+    "___\n",
+    "\n",
+    "*medB (Bottom Row)*\n",
+    "\n",
+    "1. *K‑Means (Bottom-Left)*\n",
+    "    - Red lines appear closer together, reflecting that the bulk of medB intervals lie between roughly 0 and 60–70 days.\n",
+    "    - If you set two or three clusters, K‑Means will forcibly segment them, even if the distribution is relatively tight.\n",
+    "\n",
+    "2. *DBSCAN (Bottom-Right)*\n",
+    "    - The green lines may be fewer or absent, indicating that DBSCAN could be treating most intervals as one main cluster if it sees no substantial density dip.\n",
+    "    - The narrower x-range suggests more consistent refill intervals for medB.\n",
+    "\n",
+    "*Insights:*\n",
+    "- Because the distribution is narrower, K‑Means’ forced boundaries may feel more “arbitrary.” DBSCAN may produce fewer boundaries, implying the majority of medB users refill at fairly similar intervals in the lower 80% of the distribution.\n",
+    "\n",
+    "___\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### 7.2 Comparing medA Results (100% ECDF and Density)"
    ]
   },
